@@ -36,7 +36,6 @@ void i_silc_presence_change_request(struct presence *presence,
 		(struct i_silc_gateway_connection *)presence->gwconn;
 	const char *new_name = event_get(event, "new_name");
 
-	printf("foo\n");
 	if( *new_name != '\0' )
 		silc_client_command_call(silc_gwconn->client, silc_gwconn->conn,
 				NULL, "NICK", new_name, NULL);
@@ -46,5 +45,27 @@ void i_silc_presence_status_request(struct presence *presence,
 		const char *const *status_fields,
 		presence_status_request_callback_t *cb, void *context)
 {
-	/* FIXME: stub! */
+	struct i_silc_presence *silc_presence =
+		(struct i_silc_presence *)presence;
+	struct i_silc_gateway_connection *silc_gwconn;
+	SilcClientID *id;
+	SilcBuffer idp;
+
+	i_assert(silc_presence != NULL);
+
+	silc_gwconn = (struct i_silc_gateway_connection *)presence->gwconn;
+
+	if( silc_presence->client_entry == NULL ) {
+		/* the presence is unknown to us, WHOIS by nickname */
+		silc_client_command_send(silc_gwconn->client, silc_gwconn->conn,
+			SILC_COMMAND_WHOIS, 0, 1, 1, presence->name,
+			strlen(presence->name) );
+	} else {
+		/* we know this presence, WHOIS by clientid */
+		id = silc_presence->client_entry->id;
+		idp = silc_id_payload_encode(id, SILC_ID_CLIENT);
+		silc_client_command_send(silc_gwconn->client, silc_gwconn->conn,
+			SILC_COMMAND_WHOIS, 0, 4, 1, NULL, NULL, 2, NULL, NULL,
+			3, NULL, NULL, 4, idp->data, idp->len);
+	}
 }
