@@ -1,3 +1,7 @@
+2005-06-20 13:37  Andrej Kacian <andrej@kacian.sk>
+	* src: silc-channel.c, clientops.c silc-presence.c: Wrote some
+	  groundwork for WHOIS
+
 2005-06-13 02:05  Andrej Kacian <andrej@kacian.sk>
 	* src/clientops.c: Set internal channel topic on join.
 
